# elsee-fontprocessor

./: CMakeLists.txt  README.md  fontprocesssor.c
Documentation/: FontEngineInit.md  FontInstructions.md  Routines.md  Scanning.md  TableSetup.md
Instructions/: Instructions.c
Instructions/InstructionGroups/: Core.h  FunctionGroupCD.c  FunctionGroupEF.c  FunctionGroupEight.c  FunctionGroupFive.c  FunctionGroupFour.c  FunctionGroupOne.c  FunctionGroupSeven.c  FunctionGroupSix.c  FunctionGroupThree.c  FunctionGroupTwo.c  FunctionGroupZero.c
include/: FontEngineInit.h  FontMachineRoutines.h  ProgramSetup.h  ScanConverter.h
include/FontData/: FontTableSetup.h  TrueFontTypes.h  cmap.h
